# riscvml

./: .gitignore  README.md  svbprj.md
docs_about__riscvml/: riscvml__anki_mindmap_knowledge_system__20260319.drawio
docs_about__riscvml/claud_chats_in_gui/: CLAUDE_20260319_1012.md
esp32-p4/: esp32-p4-first-steps.drawio
esp32-p4/docs/: olimex-p4-pc-programming.drawio
esp32-p4/hello_p4/: CMakeLists.txt  sdkconfig.defaults
esp32-p4/hello_p4/main/: main.c
esp32-p4__knuggets/: CLAUDE.md
esp32-p4__knuggets/esp32-p4__firststeps/: svbprj.md
esp32-p4_knuggets/: CLAUDE.md  svbprj.md
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__firststeps/: svbprj.md
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__firststeps/docs_about__esp32-p4-wifi6-kit-a__firststeps/: flash_c6_with_ftdi__20260320.drawio
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__motor_driver_IBT2_BTS7960__servo_driver_PCA9685/: svbprj.md
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__multimeter/: svbprj.md
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__secure_wap_streamer/: svbprj.md
esp32-p4_knuggets/rs_riscvml__esp32-p4-wifi6-kit-a__ws_thermal_cam_mod/: svbprj.md
esp32-p4_knuggets/rs_riscvml__p4_mlx90640/rs_riscvml__p4_mlx90640__free/: Cargo.toml
esp32-p4_knuggets/rs_riscvml__p4_mlx90640/rs_riscvml__p4_mlx90640__free/platformio_ws/: platformio.ini
esp32-p4_knuggets/rs_riscvml__p4_mlx90640/rs_riscvml__p4_mlx90640__free/platformio_ws/src/: main.c
esp32-p4_knuggets/rs_riscvml__p4_mlx90640/rs_riscvml__p4_mlx90640__free/src/: main.rs  sensor.rs  serial.rs
esp32-p4_knuggets/rs_riscvml__p4_mlx90640/rs_riscvml__p4_mlx90640__free/static/: index.html
monetize_svb/docs_about__monetize_svb/: brainstorm__monetize_riscvml_agrarobotics.md  idea_validation__market_and_product.drawio  saas_company_creation__steps.drawio
riscvml_projects/rs_riscvml__embedded_mini_ups/: svbprj.md
riscvml_projects/rs_riscvml__embedded_solar_cntrl/: generate_diagram_html.py  svbprj.md
riscvml_projects/rs_riscvml_embed__solar_cntrl__freefull/: CLAUDE.md
riscvml_projects/rs_solar_cntrl__freefull/: CLAUDE.md
riscvml_projects/rs_solar_cntrl__freefull/rs_solar_cntrl__free/: Cargo.toml  svbprj.md
riscvml_website_gcp/: Cargo.toml  Dockerfile  svbprj.md
riscvml_website_gcp/docs_about__riscvml_website_gcp/: gcp_setup_guide.md
riscvml_website_gcp/src/: main.rs
riscvml_website_gcp/static/: index.html
submission_europe_2026/: CLAUDE.md  claude_extra.md
submission_europe_2026/files/: RISCVML-Abstract-250-words.md  RISCVML-Summit-Europe-2026-Submission.docx  create_submission.js  package-lock.json
submission_europe_2026/module1/esp32-c3-basics/: Cargo.toml
submission_europe_2026/module1/esp32-c3-basics/src/: main.rs
submission_europe_2026/module3/esp32-c6-connectivity/: Cargo.toml
submission_europe_2026/module3/esp32-c6-connectivity/src/: main.rs
submission_europe_2026/module6/bird-detection/: Cargo.toml
submission_europe_2026/module6/bird-detection/src/: camera.rs  companion.rs  detect_db.rs  display.rs  encoder.rs  ffi.rs  hal.rs  inference.rs  isp.rs  led.rs  main.rs  network.rs  ppa.rs  servo.rs
submission_europe_2026/module6/sound-classification/: Cargo.toml
submission_europe_2026/module6/sound-classification/src/: detect_db.rs  led.rs  main.rs
(+25 files in other folders)
