[package]
name = "riscvml_website_gcp"
version = "0.1.0"
edition = "2024"
description = "Rust SPA webserver for riscvml.org — Axum + static file serving on GCP"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
