[package]
name = "esp32-p4_mlx90640"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
serialport = "4.6"
clap = { version = "4", features = ["derive"] }
image = "0.25"
