[package]
name = "esp32-c3-basics"
version = "0.1.0"
edition = "2021"
description = "RISCVML Module 1: ESP32-C3 Rust Basics — GPIO, Sensors, BLE"
authors = ["Scottie von Bruchhausen <scottie@riscvml.org>"]
license = "MIT"

[dependencies]
esp-hal = { version = "0.23", features = ["esp32c3"] }
defmt = "0.3"
defmt-rtt = "0.4"
