[package]
name = "esp32-c6-connectivity"
version = "0.1.0"
edition = "2021"
description = "RISCVML Module 3: ESP32-C6 Connectivity — Wi-Fi 6, ESP-NOW, MQTT"
authors = ["Scottie von Bruchhausen <scottie@riscvml.org>"]
license = "MIT"

[dependencies]
esp-hal = { version = "0.23", features = ["esp32c6"] }
esp-idf-hal = { version = "0.45", features = ["esp32c6"] }
esp-idf-svc = { version = "0.50" }
embassy-executor = { version = "0.7", features = ["defmt"] }
embassy-time = "0.4"
defmt = "0.3"
defmt-rtt = "0.4"
