[package]
name = "sound-classification"
version = "0.1.0"
edition = "2021"
description = "RISCVML Module 6: Sound/Voice Classification — Detect → Visualize → React"
authors = ["Scottie von Bruchhausen <scottie@riscvml.org>"]
license = "MIT"

[dependencies]
embassy-executor = { version = "0.7", features = ["defmt"] }
esp-hal = { version = "0.23", features = ["esp32p4"] }
esp-idf-hal = { version = "0.45", features = ["esp32p4"] }
esp-idf-sys = { version = "0.36" }
defmt = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
heapless = "0.8"
